--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -4,12 +4,37 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
  */
 
+html {
+    
+    width:100%;
+}
+
 body {
-    padding-top: 54px;
+    padding-top: 70px;
+    height:100%;
 }
 
 @media (min-width: 992px) {
     body {
         padding-top: 56px;
     }
+}
+
+/*
+	custom Style
+*/
+
+.wrapper{
+	min-height:100%;
+	position:relative;
+}
+
+.content{
+	padding-bottom:60px;//height of the footer
+}
+
+.footer{
+	position:absolute;
+	bottom:15px;
+	height:60px
 }
